added strings, alt text for images

--- a/app/src/main/res/layout/activity_answer_correct.xml
+++ b/app/src/main/res/layout/activity_answer_correct.xml
@@ -10,4 +10,10 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context="com.ac.csun.team3.AnswerCorrect">
 
+    <ImageView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:src="@drawable/checkmark"
+        android:contentDescription="@string/alt_text_correct"/>
+
 </RelativeLayout>
