--- a/app/src/main/res/layout/activity_answer_incorrect.xml
+++ b/app/src/main/res/layout/activity_answer_incorrect.xml
@@ -10,4 +10,9 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context="com.ac.csun.team3.AnswerIncorrect">
 
+    <ImageView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:src="@drawable/incorrect"
+        android:content_description="@string/incorrect_alt_text"/>
 </RelativeLayout>
