--- a/app/src/main/res/layout/activity_listening.xml
+++ b/app/src/main/res/layout/activity_listening.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/activity_listening"
     android:layout_width="match_parent"
@@ -8,7 +8,7 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="com.ac.csun.team3.Listening">
+    tools:context="com.ac.csun.team3.Listening"><![CDATA[
 
     <ImageView
         android:layout_width="80dp"
@@ -23,22 +23,29 @@
         android:layout_height="30dp"
         android:text="listening"/>
 
-    <TextView
-        android:text="TextView"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentTop="true"
-        android:layout_alignParentStart="true"
-        android:id="@+id/textView" />
+
+        android:orientation="horizontal"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_below="@+id/textView"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="105dp">
+
+    ]]>
 
     <ImageButton
-        android:src="@drawable/mic"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="317dp"
-        android:id="@+id/imageButton"
-        android:layout_alignParentBottom="true"
-        android:layout_centerHorizontal="true" />
+            android:src="@drawable/mic"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:id="@+id/micButton"
+            android:layout_weight="1" />
+
+        <ImageButton
+            android:src="@drawable/replay"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:id="@+id/imageButton2"
+            android:layout_weight="1" />
 
 
-</RelativeLayout>
+</LinearLayout>
