--- a/app/src/main/res/layout/activity_answer_correct.xml
+++ b/app/src/main/res/layout/activity_answer_correct.xml
@@ -11,20 +11,22 @@
     tools:context="com.ac.csun.team3.AnswerCorrect">
 
     <ImageView
-        android:src="@drawable/checkmark"
+        android:layout_width="150dp"
+        android:layout_height="150dp"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentTop="true"
+        android:id="@+id/settings_button"
+        android:background="@drawable/settings_icon"/>
+
+    <ImageView
+        android:background="@drawable/checkmark_icon"
         android:layout_width="500dp"
         android:layout_height="500dp"
         android:layout_centerHorizontal="true"
         android:layout_centerVertical="true"
         android:contentDescription="@string/alt_text_correct"/>
 
-    <ImageView
-    android:layout_width="80dp"
-    android:layout_height="80dp"
-    android:id="@+id/settings_button"
-    android:layout_alignParentTop="true"
-    android:layout_alignParentEnd="true"
-    android:src="@drawable/test"/>
+
 
     <TextView
         android:layout_width="100dp"
