--- a/app/src/main/res/layout/activity_question_asking.xml
+++ b/app/src/main/res/layout/activity_question_asking.xml
@@ -11,12 +11,19 @@
     tools:context="com.ac.csun.team3.QuestionAsking">
 
     <ImageView
-        android:layout_width="80dp"
-        android:layout_height="80dp"
-        android:id="@+id/settings_button"
+        android:layout_width="150dp"
+        android:layout_height="150dp"
+        android:layout_alignParentRight="true"
         android:layout_alignParentTop="true"
-        android:layout_alignParentEnd="true"
-        android:src="@drawable/test"/>
+        android:id="@+id/settings_button"
+        android:background="@drawable/settings_icon" />
+
+    <ImageViet
+        android:layout_width="150dp"
+        android:layout_height="150dp"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentTop="true"
+        />
 
     <TextView
         android:layout_width="100dp"
