--- a/app/src/main/res/layout/activity_question_start.xml
+++ b/app/src/main/res/layout/activity_question_start.xml
@@ -10,13 +10,15 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context="com.ac.csun.team3.QuestionStartScreen">
 
-    <ImageView
-        android:layout_width="80dp"
-        android:layout_height="80dp"
-        android:id="@+id/settings_button"
+    <ImageButton
+        android:layout_width="150dp"
+        android:layout_height="150dp"
+        android:layout_alignParentRight="true"
         android:layout_alignParentTop="true"
-        android:layout_alignParentEnd="true"
-        android:src="@drawable/test"/>
+        android:id="@+id/settings_button"
+        android:background="@drawable/settings_icon" />
+
+    
     <TextView
         android:layout_width="100dp"
         android:layout_height="30dp"
