--- a/app/src/main/res/layout/activity_retry.xml
+++ b/app/src/main/res/layout/activity_retry.xml
@@ -16,7 +16,7 @@
         android:id="@+id/settings_button"
         android:layout_alignParentTop="true"
         android:layout_alignParentEnd="true"
-        android:src="@drawable/test"/>
+        android:src="@drawable/settings_icon"/>
     <TextView
         android:layout_width="100dp"
         android:layout_height="30dp"
