--- a/app/src/main/res/layout/activity_launch.xml
+++ b/app/src/main/res/layout/activity_launch.xml
@@ -8,14 +8,8 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="com.ac.csun.team3.LaunchActivity">
-
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Hello!"
-        android:textSize="65dp"/>
-
+    tools:context="com.ac.csun.team3.LaunchActivity"
+    android:onClick="captchaScreen">
 
 
     <ImageView
@@ -24,6 +18,17 @@
         android:id="@+id/settings_button"
         android:layout_alignParentTop="true"
         android:layout_alignParentEnd="true"
+        android:contentDescription="@string/title_activity_settings"
         android:background="@drawable/settings_icon"
         />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/welcome_text"
+        android:gravity="center_horizontal|center"
+        android:id="@+id/LaunchText"
+        android:textSize="50sp"
+        android:layout_centerVertical="true"
+        android:layout_alignParentStart="true" />
 </RelativeLayout>
