--- a/app/src/main/res/layout/activity_listening.xml
+++ b/app/src/main/res/layout/activity_listening.xml
@@ -8,46 +8,59 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="com.ac.csun.team3.Listening"><![CDATA[
-
-    <ImageButton
-        android:layout_width="150dp"
-        android:layout_height="150dp"
-        android:layout_alignParentRight="true"
-        android:layout_alignParentTop="true"
-        android:id="@+id/settings_button"
-        android:background="@drawable/settings_icon" />
+    android:orientation="horizontal"
+    tools:context="com.ac.csun.team3.Listening">
 
 
 
-    <TextView
-        android:layout_width="100dp"
-        android:layout_height="30dp"
-        android:text="listening"/>
 
 
-        android:orientation="horizontal"
+
+    <LinearLayout
+        android:orientation="vertical"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_below="@+id/textView"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="105dp">
+        android:layout_weight="1">
 
-    ]]>
 
-    <ImageButton
+        <LinearLayout
+            android:orientation="horizontal"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_weight="1">
+
+        </LinearLayout>
+
+        <ImageButton
             android:src="@drawable/mic"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:id="@+id/micButton"
             android:layout_weight="1" />
 
+    </LinearLayout>
+
+    <LinearLayout
+        android:orientation="vertical"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_weight="1">
+
+        <LinearLayout
+            android:orientation="horizontal"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_weight="1">
+        </LinearLayout>
+
         <ImageButton
             android:src="@drawable/replay"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:id="@+id/imageButton2"
+            android:id="@+id/replayButton"
             android:layout_weight="1" />
+
+    </LinearLayout>
 
 
 </LinearLayout>
