--- a/app/src/main/res/layout/activity_victory.xml
+++ b/app/src/main/res/layout/activity_victory.xml
@@ -10,9 +10,17 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context="com.ac.csun.team3.Victory">
 
-
     <TextView
-        android:layout_width="100dp"
-        android:layout_height="30dp"
-        android:text="retry"/>
+        android:id="@+id/victory"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:textAllCaps="true"
+        android:text="@string/correct_text"
+        android:layout_centerInParent="true"
+        android:gravity="center"
+        android:textColor="#32cd32"
+        android:background="#000"
+        android:textSize="60dp"
+        android:textStyle="bold"/>
+
 </RelativeLayout>
