--- a/app/src/main/res/layout/activity_defeat.xml
+++ b/app/src/main/res/layout/activity_defeat.xml
@@ -1,18 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/activity_victory"
+    android:id="@+id/activity_defeat"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:paddingBottom="@dimen/activity_vertical_margin"
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="com.ac.csun.team3.Victory">
+    tools:context="com.ac.csun.team3.Defeat">
 
-
-    <TextView
-        android:layout_width="100dp"
-        android:layout_height="30dp"
-        android:text="@string/retry"/>
 </RelativeLayout>
