--- a/app/src/main/res/layout/activity_listening.xml
+++ b/app/src/main/res/layout/activity_listening.xml
@@ -23,7 +23,7 @@
             android:layout_weight="1">
 
             <TextView
-                android:textSize="25dp"
+                android:textSize="25sp"
                 android:gravity="center"
                 android:text="@string/record_button"
                 android:id="@+id/record_button_text"
@@ -39,7 +39,7 @@
             android:layout_weight="1">
 
             <TextView
-                android:textSize="25dp"
+                android:textSize="25sp"
                 android:gravity="center"
                 android:text="@string/repeat_button"
                 android:id="@+id/repeat_button_text"
@@ -55,7 +55,7 @@
             android:layout_weight="1">
 
             <TextView
-                android:textSize="25dp"
+                android:textSize="25sp"
                 android:text="@string/skip_button"
                 android:id="@+id/skip_button_text"
                 android:layout_width="match_parent"
