Final push from julian.

--- a/app/src/main/res/layout/activity_settings.xml
+++ b/app/src/main/res/layout/activity_settings.xml
@@ -21,6 +21,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="@string/submit_text"
-        android:layout_weight="0.5" />
+        android:layout_weight="0.5"
+        android:textColor="@color/white"/>
 
 </LinearLayout>
